K-medoid for Clustering

--- a/k_medoid.ipynb
+++ b/k_medoid.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import random"
+    "import random\n",
+    "from sklearn import datasets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,8 +55,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# K-Medoid"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,26 +82,50 @@
     "            ndis=0\n",
     "            for x in range(len(kmed[0])-1):\n",
     "                ndis+=abs(data[i][x]-kmed[j][x])\n",
-    "            #print (\"SDS\",ndis)\n",
     "            if ndis<dis:\n",
     "                data[i][-1]=kmed[j][-1]\n",
     "                dis=ndis\n",
     "        cost+=data[i][-1]\n",
-    "    print (\"Cost:\",cost)"
+    "    print (\"Cost on k=\",k,\"is\",cost)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 252,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from sklearn import datasets"
+    "# Testing on given data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cost on k= 1 is 5100\n",
+      "Cost on k= 2 is 13953\n",
+      "Cost on k= 3 is 15436\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,4):\n",
+    "    k_medoid(i,df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# K-Medoid on Iris Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,10 +134,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#PreProcessing\n",
     "for i in range(len(df)):\n",
     "    df[i]=list(df[i])\n",
     "    df[i].append(-1)"
@@ -113,17 +146,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cost: 12150\n",
-      "Cost: 17468\n",
-      "Cost: 3759\n",
-      "Cost: 14016\n"
+      "Cost on k= 1 is 9150\n",
+      "Cost on k= 2 is 12406\n",
+      "Cost on k= 3 is 6031\n",
+      "Cost on k= 4 is 11935\n"
      ]
     }
    ],
